Simplify input detection logic

--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,9 @@
     <script src="example.js" type="text/javascript" charset="utf-8" defer></script>
   </head>
   <body>
-    <p id="shortcut">(nothing)</p>
+    <p>Keyboard shortcuts do not interfere with inputs.</p>
+    <input type="text" />
+    <p>Pressed: <span id="shortcut">(nothing)</span></p>
+
   </body>
 </html>
