Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,39 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Bacontrap : Keyboard shortcuts with Bacon.js" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Bacontrap by lautis</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Bacontrap</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Bacontrap</h1>
+        <p>Keyboard shortcuts with Bacon.js</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lautis/bacontrap">View on GitHub</a>
+        <p class="view"><a href="https://github.com/lautis/bacontrap">View the Project on GitHub <small>lautis/bacontrap</small></a></p>
 
-          <h1 id="project_title">Bacontrap</h1>
-          <h2 id="project_tagline">Keyboard shortcuts with Bacon.js</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lautis/bacontrap/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lautis/bacontrap/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p><a href="https://travis-ci.org/lautis/bacontrap"><img src="https://img.shields.io/travis/lautis/bacontrap/master.svg" alt="Build Status"></a></p>
-
-<p><a href="https://github.com/ccampbell/mousetrap">Mousetrap</a> inspired keyboard
+        <ul>
+          <li><a href="https://github.com/lautis/bacontrap/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/lautis/bacontrap/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/lautis/bacontrap">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p><a href="https://github.com/ccampbell/mousetrap">Mousetrap</a> inspired keyboard
 shortcuts implemented with <a href="https://github.com/raimohanska/bacon.js">Bacon.js</a>.</p>
 
 <p>Unlike Mousetrap, Bacontrap is not a standalone library: Bacon.js and
@@ -134,17 +129,12 @@ these is probably a bad idea anyway</li>
 <li>Pressing modifier keys do not interrupt shortcut sequences</li>
 </ul>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bacontrap maintained by <a href="https://github.com/lautis">lautis</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/lautis">lautis</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
