--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bacontrap</title>
-    <script src="../node_modules/jquery/dist/jquery.js" type="text/javascript" charset="utf-8" defer></script>
-    <script src="../node_modules/baconjs/dist/Bacon.js" type="text/javascript" charset="utf-8" defer></script>
-    <script src="../bacontrap.js" type="text/javascript" charset="utf-8" defer></script>
-    <script src="example.js" type="text/javascript" charset="utf-8" defer></script>
+    <script src="example.browser.js" type="text/javascript" charset="utf-8" defer></script>
   </head>
   <body>
     <p>Keyboard shortcuts do not interfere with inputs.</p>
